[*] Switch on Java 21(virtual threads)